[package]
name = "message-packetizer"
description = "Sign and packetize structs messages over SRT"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wavey-ai/message-packetizer"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
bytes = "1.6.0"
gen-id = "0.3.0"
hmac = "0.12.1"
minicbor = "0.25.1"
pot = "3.0.1"
rustls = { version = "0.21.0" }
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0.216"
sha2 = "0.10.8"
tls-helpers = "0.1.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
